# Igloo

./: CMakeLists.txt  README.md  package.xml
include/: MoveRobot.h  MoveRobotWithGripper.h
launch/: sim.launch
models/: iiwa_on_structure.urdf.xacro  structure.urdf.xacro
src/: MoveRobot.cpp  MoveRobotWithGripper.cpp  moveRobotWithGripper_node.cpp  moveRobot_node.cpp
worlds/: igluna_rviz_config.rviz  igluna_world.world
